# 255-main

./: .gitignore  .mdl_style.rb  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
demos/bad_schema_client_api/: raise.py
demos/data_transform_api/: pipeline_sk.py
demos/docker_demo/: Dockerfile
demos/docker_hello/docker/: Dockerfile  pyproject.toml
demos/flask_ci_demo/resources/: default.py
demos/flask_ci_demo/tests/: test_root.py
demos/impute_api/: impute.py  train_pipeline.py
demos/kustomize_skaffold_demo/: Dockerfile  package.json  tsconfig.json
demos/kustomize_skaffold_demo/spanner-dds/: schema.sql  songs.sql
demos/kustomize_skaffold_demo/src/: Song.ts  config.ts  logger.ts  models.router.ts  (+3 more)
demos/lr_redis/: app.py  config.py
demos/ml_api/: app.py  requirements.txt
demos/model_predictions_api/: simple_sk.py  train.py
demos/redis_api/: app.py  app_cache.py  config.py
demos/redis_demo/: cache.py  test.py
demos/secrets_management/: test.txt
demos/validation_features/: curl_calls.sh  feature_validation_sk.py  train.py
demos/what_is_an_api/: main.py  requirements.txt
infra/: .gitignore  acr.tf  aks.tf  dns.tf  k8s_config.tf  k8s_config_teams.tf  locals.tf  logging.tf  main.tf  output.tf  rg.tf  security.tf
infra/cluster_configure/: bootstrap_aks.sh  grafana.yaml  helmfile.yaml  kiali.yaml  prometheus.yaml
infra/github/: pyproject.toml
infra/github/runner/: main.py
labs/: .gitignore
labs/lab_1/: README.md
labs/lab_2/: README.md
labs/lab_3/: README.md
labs/lab_4/: README.md
labs/lab_5/: Findings.md  load.js
(+37 files in other folders)
